@@ -30,12 +30,13 @@ Kernel configured for up to 4 processors.
 Processor type: i486 (Intel 80486)
 Processors active: 0 1 2 3
 Primary memory available: 4.00 gigabytes
-Default processor set: 99 tasks, 504 threads, 4 processors
-Load average: 1.24, Mach factor: 2.75
+Default processor set: 96 tasks, 517 threads, 4 processors
+Load average: 1.52, Mach factor: 2.47
 /bin/machine           = unknown
 /usr/bin/oslevel       = unknown
 /bin/universe          = unknown
 
+PATH: /sw/lib/freetype2/bin/
 PATH: /sw/bin
 PATH: /usr/bin
 PATH: /bin
@@ -441,21 +442,3 @@ target_vendor='apple'
 #define VERSION ""
 
 configure: exit 0
-
-## ---------------------- ##
-## Running config.status. ##
-## ---------------------- ##
-
-This file was extended by config.status, which was
-generated by GNU Autoconf 2.60.  Invocation command line was
-
-  CONFIG_FILES    = 
-  CONFIG_HEADERS  = 
-  CONFIG_LINKS    = 
-  CONFIG_COMMANDS = 
-  $ ./config.status config.h
-
-on Chriss-Work-Computer.local
-
-config.status:648: creating config.h
-config.status:864: config.h is unchanged
